<resources>
    <string name="app_name">Rick&amp;MortyApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_time_of_creation">Time at which character was created in the database:</string>
    <string name="location_time_of_creation">Time at which location was created in the database:</string>
    <string name="episode_time_of_creation">Time at which episode was created in the database:</string>
    <string name="character_image">Character image</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_episodes">Episodes</string>
    <string name="character_status">Status</string>
    <string name="character_name">Name</string>
    <string name="character_species">Species</string>
    <string name="character_gender">Gender</string>
    <string name="episode_code">Episode code</string>
    <string name="episode_air">Episode air date</string>
    <string name="episode_name">Episode name</string>
    <string name="location_name">Location name</string>
    <string name="location_dimension">Location dimension</string>
    <string name="location_type">Location type</string>
    <string name="menu_favourite">Favourite</string>
</resources>