<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rect_top"
    android:backgroundTint="@color/cyan_dark">

    <TextView
        android:id="@+id/textView1"
        style="@style/TextAppearanceData"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/character_name"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/character_name"
        style="@style/TextAppearanceLoadedData"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider1"
        tools:text="Character Name" />

    <view
        android:id="@+id/divider1"
        style="@style/Divider"
        class="androidx.cardview.widget.CardView"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toStartOf="@+id/character_name"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearanceData"
        android:layout_marginTop="8dp"
        android:text="@string/character_status"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/character_status"
        style="@style/TextAppearanceLoadedData"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider2"
        tools:text="Status" />

    <view
        android:id="@+id/divider2"
        style="@style/Divider"
        class="androidx.cardview.widget.CardView"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/character_status"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearanceData"
        android:layout_marginTop="8dp"
        android:text="@string/character_species"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/character_species"
        style="@style/TextAppearanceLoadedData"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider3"
        tools:text="Species" />

    <view
        android:id="@+id/divider3"
        style="@style/Divider"
        class="androidx.cardview.widget.CardView"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/character_species"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearanceData"
        android:layout_marginTop="8dp"
        android:text="@string/character_gender"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/character_gender"
        style="@style/TextAppearanceLoadedData"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider4"
        tools:text="Gender" />

    <view
        android:id="@+id/divider4"
        style="@style/Divider"
        class="androidx.cardview.widget.CardView"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/character_gender"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        style="@style/TextAppearanceData"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/character_time_of_creation"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <TextView
        android:id="@+id/character_created"
        style="@style/TextAppearanceLoadedData"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:text="Time of creation" />

</androidx.constraintlayout.widget.ConstraintLayout>